# GPUI_Learning

./: CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/demos/code_playground/: Cargo.toml
apps/demos/code_playground/src/: lib.rs  main.rs
apps/demos/dashboard/: Cargo.toml
apps/demos/dashboard/src/: lib.rs  main.rs
apps/demos/data_explorer/: Cargo.toml
apps/demos/data_explorer/src/: lib.rs  main.rs
apps/demos/markdown_notes/: Cargo.toml
apps/demos/markdown_notes/src/: lib.rs  main.rs
apps/demos/webview/: Cargo.toml
apps/demos/webview/src/: lib.rs  main.rs
apps/gallery/: Cargo.toml
apps/gallery/src/: main.rs
apps/workbench/: Cargo.toml
apps/workbench/src/: main.rs
crates/components/: Cargo.toml  README.md
crates/components/src/: docs.rs  lib.rs
crates/data/: Cargo.toml  README.md
crates/data/src/: lib.rs
crates/designsystem/: Cargo.toml  README.md  build.rs
crates/designsystem/src/: icons.rs  lib.rs  theme.rs  tokens.rs
crates/example_plot/: Cargo.toml
crates/example_plot/src/: lib.rs
crates/platform/: Cargo.toml  README.md  build.rs
crates/platform/assets/images/: .gitignore
crates/platform/src/: assets.rs  lib.rs
docs/: accessibility.md  components.md  contributing.md  localization.md  performance.md  theming.md
xtask/: Cargo.toml
xtask/src/: main.rs
