[package]
name = "designsystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
gpui.workspace = true
gpui-component = "0.4.0-preview0"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[build-dependencies]
heck = "0.5"
