[package]
name = "platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
gpui.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
once_cell = "1.19"
crossbeam-channel = "0.5"
unic-langid = { version = "0.9", features = ["serde"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
