[package]
name = "webview_demo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = []
webview = []

[dependencies]
gpui.workspace = true
designsystem.workspace = true
components.workspace = true
platform.workspace = true
